i make changes on my grid page

--- a/grid.html
+++ b/grid.html
@@ -17,20 +17,11 @@
         </nav>
 
         <main>
-          <div class=" item one"></div>
-          <div class="item two"></div>
-          <div class="item three"></div>
-          <div class="item four"></div>
-          <div class="item five"></div>
+          <div class="first"></div>
+          <div class="second"></div>
+          <div class="third"></div>
+          <div class="fourth"></div>
+          <div class="fifth"></div>
       </main>
-
-        <!-- <main>
-            <div class="item-a">A</div>
-            <div class="item-b">B</div>
-            <div class="item-c">C</div>
-            <div class="item-d">D</div>
-            <div class="item-e">E</div>
-      
-          </main> -->
         </body>
       </html>
